@@ -8,61 +8,26 @@ import ru.clevertec.parser.service.api.JsonToMap;
 import java.util.List;
 import java.util.Map;
 
+import static ru.clevertec.parser.service.test.JsonStringData.INCORRECT_JSON;
+import static ru.clevertec.parser.service.test.JsonStringData.STRING_SIMPLE_OBJECT;
+
 class JsonValueTest {
 
     @Test
     void parseToMap() {
-        String json = """
-                {
-                  "intId": 4,
-                  "ch": "e",
-                  "bool": false,
-                  "floatOId": 4.0,
-                  "intArr": [
-                    1,
-                    2,
-                    3,
-                    4
-                  ],
-                  "users": [
-                    {
-                      "id": "2",
-                      "name": "Test",
-                      "prop": [
-                        {
-                          "prop": 1
-                        },
-                        {
-                          "prop": 2
-                        }
-                      ]
-                    }
-                      ]
-                    }
-                  ]
-                }
-                """;
         JsonToMap jsonToMap = new JsonValue();
-        Map<String, Object> map = jsonToMap.parseToMap(json);
+        Map<String, Object> map = jsonToMap.parseToMap(STRING_SIMPLE_OBJECT);
         Assertions.assertEquals("4", map.get("intId"));
         Assertions.assertEquals("e", map.get("ch"));
         Assertions.assertEquals("false", map.get("bool"));
         Assertions.assertEquals("4.0", map.get("floatOId"));
-        Assertions.assertEquals("1", ((List) map.get("intArr")).get(0));
-        Assertions.assertEquals("2", ((Map) ((List) map.get("users")).get(0)).get("id"));
+        Assertions.assertEquals("1", ((List<?>) map.get("intArr")).getFirst());
+        Assertions.assertEquals("2", ((Map<?, ?>) ((List<?>) map.get("users")).getFirst()).get("id"));
     }
 
     @Test
     void parseToMapWithIncorrect() {
-        String json = """
-                                {
-                                  "intId": 4
-                {
-                                }
-                """;
         JsonToMap jsonToMap = new JsonValue();
-        Assertions.assertThrows(IncorrectJsonStringException.class, () -> {
-            jsonToMap.parseToMap(json);
-        });
+        Assertions.assertThrows(IncorrectJsonStringException.class, () -> jsonToMap.parseToMap(INCORRECT_JSON));
     }
 }
