@@ -5,75 +5,15 @@ import org.junit.jupiter.api.Test;
 import ru.clevertec.parser.service.api.JsonToObject;
 import ru.clevertec.parser.service.test.Root;
 
+import static ru.clevertec.parser.service.test.JsonStringData.JSON_WITH_NULL;
+import static ru.clevertec.parser.service.test.JsonStringData.STRING_HARD_OBJECT;
+
 class MapperFacadeTest {
 
     @Test
     void parseToObject() {
-        String json = """
-                {
-                  "intId": 4,
-                  "longId": 4,
-                  "doubleId": 4,
-                  "byteId": 4,
-                  "shortId": 4,
-                  "floatId": 4.0,
-                  "ch": "e",
-                  "bool": false,
-                  "intOId": 4,
-                  "longOId": 4,
-                  "doubleOId": 4,
-                  "byteOId": 4,
-                  "shortOId": 4,
-                  "floatOId": 4.0,
-                  "chO": "e",
-                  "boolO": false,
-                  "useridString": "user_id_value",
-                  "intArr": [
-                    1,
-                    2,
-                    3,
-                    4
-                  ],
-                  "intList": [
-                    1,
-                    2,
-                    3,
-                    4
-                  ],
-                  "users": [
-                    {
-                      "id": "2",
-                      "name": "Test",
-                      "prop": [
-                        {
-                          "prop": 1
-                        },
-                        {
-                          "prop": 2
-                        }
-                      ]
-                    },
-                    {
-                      "id": "6",
-                      "name": "Test name",
-                      "prop": [
-                        {
-                          "prop": 1
-                        },
-                        {
-                          "prop": 2
-                        }
-                      ]
-                    }
-                  ],
-                  "map": {
-                    "1": "2",
-                    "3": "4"
-                  }
-                }
-                """;
         JsonToObject classParser = new MapperFacadeProxy(new MapperFacade());
-        Root root = classParser.parseToObject(json, Root.class);
+        Root root = classParser.parseToObject(STRING_HARD_OBJECT, Root.class);
         Assertions.assertFalse(root.isBool());
         Assertions.assertEquals(false, root.getBoolO());
         Assertions.assertEquals(4, root.getByteId());
@@ -92,20 +32,15 @@ class MapperFacadeTest {
         Assertions.assertEquals(4.0, root.getDoubleOId());
         Assertions.assertEquals("user_id_value", root.getUseridString());
         Assertions.assertEquals(1, root.getIntArr()[0]);
-        Assertions.assertEquals("2", root.getUsers().get(0).getId());
-        Assertions.assertEquals(1, root.getUsers().get(0).getProp().get(0).getPr());
+        Assertions.assertEquals("2", root.getUsers().getFirst().getId());
+        Assertions.assertEquals(1, root.getUsers().getFirst().getProp().getFirst().getPr());
         Assertions.assertEquals("2", root.getMap().get("1"));
     }
 
     @Test
     void parseToObjectWithNull() {
-        String json = """
-                {
-                  "intId": 4
-                }
-                """;
         JsonToObject classParser = new MapperFacade();
-        Root root = classParser.parseToObject(json, Root.class);
+        Root root = classParser.parseToObject(JSON_WITH_NULL, Root.class);
         Assertions.assertEquals(4, root.getIntId());
         Assertions.assertNull(root.getIntOId());
     }
